[package]
name         = "keyhunter"
version      = "0.1.1"
description  = "Check for leaked API keys and secrets on public websites"
license      = "GPL-3.0"
license-file = "LICENSE.md"
repository   = "https://github.com/DonIsaac/keyhunter"
keywords     = ["security", "api-keys", "secrets", "scraping", "web"]
categories   = ["command-line-utilities", "development-tools"]
edition      = "2021"
exclude      = ["/assets", "/benches"]

[features]
default      = []
report       = ["dep:owo-colors"]
build-binary = ["report", "dep:clap", "dep:clap-verbosity-flag", "dep:pretty_env_logger"]

[lib]
name = "keyhunter"

[[bin]]
name              = "keyhunter"
required-features = ["build-binary"]

[dependencies]
dashmap    = { version = "5.5.3", features = ["rayon"] }
ego-tree   = { version = "0.6.2" }
index_vec  = { version = "0.1.3" }
log        = { version = "0.4.21", features = ["kv"] }
miette     = { version = "7.2.0", features = ["fancy", "syntect-highlighter"] }
owo-colors = { version = "4.0.0", optional = true }
oxc        = { version = "0.12.5" }
rand       = { version = "0.8.5" }
rayon      = { version = "1.10.0" }
regex      = { version = "1.10.4", features = ["perf-dfa-full"] }
scraper    = { version = "0.19.0" }
serde      = { version = "1.0.198", features = ["derive"] }
thiserror  = { version = "1.0.59" }
tinyvec    = { version = "1.6.0", features = ["alloc", "serde", "rustc_1_40"] }
toml       = { version = "0.8.12" }
ureq       = { version = "2.9.7", features = ["cookies"], default-features = true }
url        = { version = "2.5.0" }

# Binary dependencies
clap                = { version = "4.5.4", features = ["derive", "color"], optional = true }
clap-verbosity-flag = { version = "2.2.0", optional = true }
pretty_env_logger   = { version = "0.5.0", optional = true }

[dev-dependencies]
codspeed-criterion-compat = { version = "2.6.0" }
criterion                 = { version = "0.5.1" }
csv                       = { version = "1.3.0" }
serde_json                = { version = "1.0.116" }

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev.package]
oxc.opt-level     = 2
scraper.opt-level = 1
regex.opt-level   = 3

[profile.dev-fast]
inherits  = "dev"
opt-level = 1

[profile.release]
lto           = "fat"
codegen-units = 1

[[bench]]
name    = "key_extraction"
harness = false
