[package]
name    = "key_finder"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow.workspace      = true
html_parser.workspace = true
oxc.workspace         = true
rand.workspace        = true
regex.workspace       = true
serde.workspace       = true
thiserror.workspace   = true
tinyvec.workspace     = true
toml.workspace        = true
ureq.workspace        = true
rayon.workspace       = true
url.workspace         = true
