[package]
name    = "keyhunter"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow.workspace            = true
csv.workspace               = true
dashmap.workspace           = true
ego-tree.workspace          = true
log.workspace               = true
miette.workspace            = true
owo-colors.workspace        = true
oxc.workspace               = true
pretty_env_logger.workspace = true
rand.workspace              = true
rayon.workspace             = true
regex.workspace             = true
scraper.workspace           = true
serde.workspace             = true
thiserror.workspace         = true
tinyvec.workspace           = true
toml.workspace              = true
ureq.workspace              = true
url.workspace               = true
