[package]
name    = "keyhunter_cli"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
clap-verbosity-flag.workspace = true
clap.workspace                = true
keyhunter.workspace          = true
log.workspace                 = true
miette.workspace              = true
pretty_env_logger.workspace   = true
rayon.workspace               = true
thiserror.workspace           = true
